--- a/file1.html
+++ b/file1.html
@@ -7,6 +7,7 @@
 <body>
     <h1>vikas jadaun</h1>
     <h1>ram is a good boy</h1>
+    <h1>ram is a good boy</h1>
     <h1>how accroding</h1>
 </body>
 </html>
