--- a/flex.html
+++ b/flex.html
@@ -4,13 +4,18 @@
   <style>
     .flex-container{
         display: flex;
-        /* height: 700px; */
+        height: 800px;
+        /* flex-direction: column; */
+        /* flex-direction: row-reverse; */
+        /* flex-direction: column; */
+        /* flex-direction: column-reverse; */
         /* arange is varitaical direction top to bottom  */
         /* align-items: stretch; */
         /* align-items: flex-start; */
         /* align-items: stretch; */
         /* align-items: flex-start; */
         /* align-items: center; */
+        /* align-items: flex-end; */
    /* arange is vartical direction top to bottom  */
         /* justify-content: flex-start; */
         /* justify-content: flex-end; */
@@ -23,25 +28,28 @@
           */
           /* justify-content: space-between; */
           /* justify-content: space-around; */
-          justify-content: space-evenly;
+          /* justify-content: space-evenly; */
     }
   .item1,.item2,.item3{
 background-color: tomato;
 padding: 10px;
 border: 2px solid greenyellow;
-width: 204;
+width: 20%;
   }  
   .item1{
     /* order: 3; */
     /* flex: 1; */
+    align-items: flex-start;
   }
   .item2{
     /* order: 1; */
     /* flex: 2; */
+    align-self: center;
   }
   .item3{
     /* order: 2; */
     /* flex: 2; */
+    align-items: flex-end;
   }
   </style>
     <title>css flex box</title>
