--- a/flex.html
+++ b/flex.html
@@ -11,7 +11,7 @@
         /* flex-direction: column-reverse; */
         /* arange is varitaical direction top to bottom  */
         /* align-items: stretch; */
-        /* align-items: flex-start; */
+        align-items: flex-start;
         /* align-items: stretch; */
         /* align-items: flex-start; */
         /* align-items: center; */
@@ -39,17 +39,20 @@ width: 20%;
   .item1{
     /* order: 3; */
     /* flex: 1; */
-    align-items: flex-start;
+    align-self: flex-start;
+    padding: 10px;
   }
   .item2{
     /* order: 1; */
     /* flex: 2; */
     align-self: center;
+    padding: 10px;
   }
   .item3{
     /* order: 2; */
     /* flex: 2; */
-    align-items: flex-end;
+     align-self: flex-end;
+    padding: 10px;
   }
   </style>
     <title>css flex box</title>
